[tool.poetry]
name = "drawnmap"
version = "0.1.0"
description = ""
authors = ["bl1nkker <nurovich14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
plotly = "^5.3.1"
ipaddress = "^1.0.23"
dash = "^2.0.0"
networkx = "^2.7.1"
pandas = "^1.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"